# shop-plugin

./: .crails  CMakeLists.txt  prebuild.sh
app/: database.cpp  main.cpp  renderers.cpp  routes.cpp
app/controllers/admin/: product.hpp  tax.hpp
app/models/: cart.cpp  cart.hpp  cart_item.cpp  cart_item.hpp  product.cpp  product.hpp  product_traits.hpp  tax.cpp  tax.hpp  tax_traits.hpp
